--- a/style.css
+++ b/style.css
@@ -49,3 +49,22 @@ html, body {
   opacity: 0;
   scale: 0;
 }
+#page-2{
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 3vw 1vw;
+  justify-content: space-between;
+}
+#page-2 .elem{
+  height: 100%;
+  width: 31%;
+  /* background-color: red; */
+}
+#page-2 .elem img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
