--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html, body {
   scale: 0;
 }
 #page2{
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   position: relative;
   display: flex;
@@ -63,10 +63,91 @@ html, body {
   width: 31%;
   /* background-color: red; */
   overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #page2 .elem img{
   height: 100%;
   width: 100%;
   object-fit: cover;
   scale: 1.2;
+}
+#page3 {
+  height: 100vh;
+  width: 100%;
+  background-color: aqua;
+}
+#page2 .elem .dets{
+  height: 60px;
+  width: 70%;
+  border-radius: 50px;
+  background-color: red;
+  position: absolute;
+  z-index: 12;
+}
+#page2 .elem .dets:hover{
+  height: 200px;
+}
+
+
+@media (max-width: 600px) {
+  #page1 h1{
+  font-size: 14vw;
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: 13vw;
+  letter-spacing: -2px;
+}
+#page1{
+  min-height: 70vh;
+  width: 100%;
+  padding: 0 3vw;
+  padding-top: 20vh;
+}
+#video-container{
+  height: 25vh;
+  margin-top: 3vw;
+}
+#video-container #play{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 4vw 3vw;
+  border-radius: 50%;
+  color: white;
+  font-size: 2vw;
+  opacity: 1;
+  scale: 1;
+  transform: translate(-50%, -50%);
+}
+#page2{
+  min-height: 100vh;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5vw 3vw;
+  justify-content: space-between;
+}
+#page2 .elem{
+  height: 100vh;
+  width: 100%;
+  /* background-color: red; */
+  overflow: hidden;
+  margin-bottom: 3vw;
+}
+/* #page2 .elem img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  scale: 1.2;
+}
+#page3 {
+  height: 100vh;
+  width: 100%;
+  background-color: aqua;
+} */
 }
