--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 html, body {
   height: 100%;
   width: 100%;
+  background-color: #F7F7F7;
 }
 #page1{
   min-height: 100vh;
@@ -74,11 +75,6 @@ html, body {
   object-fit: cover;
   scale: 1.2;
 }
-#page3 {
-  height: 100vh;
-  width: 100%;
-  background-color: aqua;
-}
 #page2 .elem .dets{
   height: 60px;
   width: 70%;
@@ -90,6 +86,31 @@ html, body {
 #page2 .elem .dets:hover{
   height: 200px;
 }
+#page3 {
+  min-height: 120vh;
+  width: 100%;
+  background-color: #F7F7F7;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.child{
+  height: 55vh;
+  width: 40vh;
+  /* background-color: red; */
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.child img{
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 
 
 @media (max-width: 600px) {
@@ -139,15 +160,12 @@ html, body {
   overflow: hidden;
   margin-bottom: 3vw;
 }
-/* #page2 .elem img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  scale: 1.2;
+#page2 .elem .dets{
+  height: 40px;
+  width: 70%;
+  border-radius: 50px;
+  background-color: red;
+  position: absolute;
+  z-index: 12;
 }
-#page3 {
-  height: 100vh;
-  width: 100%;
-  background-color: aqua;
-} */
 }
